- `tweak`: Add "flask-contents", makes flasks/vials/waterskins be named according to their contents

## Fixes

## Misc Improvements
- `regrass`: also regrow depleted cavern moss
- `probe`: act on the selected building/unit instead of requiring placement of the keyboard cursor for ``bprobe`` and ``cprobe``

## Documentation

## API

## Lua

## Removed

# 50.11-r6

## New Features
- `zone`: Add overlay for toggling butchering/gelding/adoption/taming options in animal "Overview" tabs

## Fixes
- `dig-now`: remove diagonal ramps rendered unusable by digging
- `dig-now`: fix error propagating "light" and "outside" properties to newly exposed tiles when piercing the surface
- `sort`: fix potential crash when switching between certain info tabs
- `suspendmanager`: overlays for suspended building info panels no longer disappear when another window has focus

## Misc Improvements
- `reveal`: automatically reset saved map state when a new save is loaded
- `autonestbox`: don't automatically assign partially trained egg-layers to nestboxes if they don't have an ongoing trainer assigned since they might revert to wild
- `buildingplan`: replace ``[edit filters]`` button in planner overlay with abbreviated filter information

## API
- ``Units::assignTrainer``: assign a trainer to a trainable animal
- ``Units::unassignTrainer``: unassign a trainer from an animal
- ``Gui::getAnyWorkshopJob``: get the first job associated with the selected workshop
- ``Gui::getAnyJob``: get the job associated with the selected game element (item, unit, workshop, etc.)

## Lua
- ``dfhack.units.isTamable``: return false for invaders to match vanilla logic
- ``dfhack.units.assignTrainer``: expose API to Lua
- ``dfhack.units.unassignTrainer``: expose API to Lua
- ``dfhack.gui.getAnyWorkshopJob``: expose API to Lua
- ``dfhack.gui.getAnyJob``: expose API to Lua

## Removed
- ``nopause``: functionality has moved to `spectate`

# 50.11-r5

## New Tools